2009-02-14  higepon  <higepon@users.sourceforge.jp>

        * lib/core/r5rs.scm: Rewrote quotient, remainder and modulo in C++ for better performance.

2009-02-13  higepon  <higepon@users.sourceforge.jp>

        * bench/aobench.ss: Added for flonum aritmetic operations.

2009-02-12  higepon  <higepon@users.sourceforge.jp>

        * Object-inl.h (Object::isNil): Force to use Immediate value.

        * Not to use isNumber before calling Arithmetic::op*. It causes slow arithmetic.

2009-02-10  higepon  <higepon@users.sourceforge.jp>

        * Added : msse, msse2, msse3 and fpmath=sse for some processors.

        * configure.ac: Added OSX Core2 Duo check.

2009-02-09  higepon  <higepon@users.sourceforge.jp>

        * doc/text/srfi.txt (Title): Added document for SRFIs.

2009-02-08  higepon  <higepon@users.sourceforge.jp>

        * configure.ac: Added -march.

2009-02-07  higepon  <higepon@users.sourceforge.jp>

        * Size reduction srfi 0, 1, 11, 13 and 14.

        * scripts/only-maker.ss : Added.

        * library.scm (show-profile): Make up profiler results. (ungensym things.)

2009-02-07  kokosabu  <kokosabu@gmail.com>

        * PortProcedures.cpp : Added transcoder-codec, transcoder-eol-style,
                                     transcoder-error-handling-mode.

2009-02-06  higepon  <higepon@users.sourceforge.jp>

        * Use Derick Eddington's SRFIs.
        (srfi :0 cond-expand)
        (srfi :1 lists)
        (srfi :2 and-let*)
        (srfi :6 basic-string-ports)
        (srfi :8 receive)
        (srfi :9 records)
        (srfi :11 let-values)
        (srfi :13 strings)
        (srfi :14 char-sets)
        (srfi :16 case-lambda)
        (srfi :19 time)
        (srfi :23 error)
        (srfi :26 cut)
        (srfi :27 random-bits)
        (srfi :31 rec)
        (srfi :37 args-fold)
        (srfi :38 with-shared-structure)
        (srfi :39 parameters)
        (srfi :41 streams)
        (srfi :42 eager-comprehensions)
        (srfi :43 vectors)