@@ -1,5 +1,9 @@
 2009-02-14  higepon  <higepon@users.sourceforge.jp>
 
+        * NUMBER_MUL : Make shortcut for Real-valued multiply.
+
+        * Inlined Object::makeFlonum().
+
         * lib/core/r5rs.scm: Rewrote quotient, remainder and modulo in C++ for better performance.
 
 2009-02-13  higepon  <higepon@users.sourceforge.jp>
